--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
-        <p style="text-align: center;"><button class="button button3">Discord<a href="https://discord.gg/vYEzuKDrTm"></a></button></p>
+        <p style="text-align: center;"><button class="button button3"><a href="https://discord.gg/vYEzuKDrTm">Discord</a></button></p>
         
         
         </body>
