--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1209424970169727"
+     crossorigin="anonymous"></script>
+
+
         <title>
             RantItOut: Coming Soon
         </title>
@@ -91,7 +96,7 @@
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
-        <p style="text-align: center;"><button class="button button3"><a href="https://discord.gg/vYEzuKDrTm">Discord</a></button></p>
+        <p style="text-align: center;"> <a href="https://discord.gg/vYEzuKDrTm"><button class="button button3">Discord</a></button></p>
         
         
         </body>
