--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
         <p style="text-align: center;"><br></p>
-        <p style="text-align: center;"> <a href="https://discord.gg/vYEzuKDrTm"><button class="button button3">Discord</a></button></p>
+        <p style="text-align: center;"><a href='https://discord.gg/vYEzuKDrTm'><button class="button button3">Discord</button></a></p>
         
         
         </body>
